# energy-optimizer

./: .dockerignore  .env.example  .gitignore  2026-07-12-energy-optimizer-app-design.md  DESIGN.md  Dockerfile  Makefile  README.md  compose.dev.yml  compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  hooks.ts  styles.css
frontend/src/views/: NowView.tsx  PlanView.tsx  SavingsView.tsx
src/energy_optimizer/: __init__.py  __main__.py  accounting.py  config.py  explain.py  ha_client.py  mqtt_publish.py  optimiser.py  policies.py  pstryk_client.py  safety.py  scheduler.py  service.py  simulator.py  store.py
src/energy_optimizer/forecast/: __init__.py  load.py  price.py  pv.py
src/energy_optimizer/web/: __init__.py  app.py  routes.py  schemas.py
tests/: conftest.py  test_api.py  test_config.py  test_ha_client.py  test_mqtt_discovery.py  test_optimiser.py  test_pstryk_client.py  test_safety_and_forecast.py  test_service.py  test_simulator.py
