[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energy-optimizer"
version = "0.1.0"
description = "Solar + battery optimisation app (dry-run first): collects telemetry and prices, plans battery/grid flows via MILP, publishes recommendations to Home Assistant."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "energy-optimizer contributors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "paho-mqtt>=2.1",
    "pulp>=2.8",
    "highspy>=1.7",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-paho-mqtt",
]

[project.scripts]
energy-optimizer = "energy_optimizer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/energy_optimizer"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
